examples/test/testpolicy19280.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19280
  namespace: namespace53
spec:
  podSelector:
    matchLabels:
      key49: value10
      key16: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value7
          key31: value45
      podSelector:
        matchLabels:
          key12: value17
